调试BLE-三星电表

--- a/app/src/main/res/layout/activity_ble_data_passthrough.xml
+++ b/app/src/main/res/layout/activity_ble_data_passthrough.xml
@@ -17,7 +17,7 @@
             android:background="@color/red"
             android:gravity="center_horizontal"
             android:text="BLE Disconnected"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:visibility="gone"/>
 
         <RelativeLayout
