--- a/app/src/main/res/layout/activity_ble_meter.xml
+++ b/app/src/main/res/layout/activity_ble_meter.xml
@@ -13,8 +13,8 @@
         android:gravity="center_horizontal"
         android:text="BLE Disconnected"
         android:visibility="gone"
-        android:textColor="@color/white"/>
-
+        android:textColor="@color/gray"/>
+    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,11 +24,21 @@
         android:layout_marginTop="50dp"
         android:paddingRight="5dp">
 
+        <TextView
+            android:id="@+id/tv_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+
         <Button
             android:id="@+id/bt_get_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
+            android:layout_below="@+id/tv_id"
             android:paddingRight="20dp"
             android:text="Get Meter Id"
             />
