1. BLE增加文件发送测试 2. 优化mtu设置

--- a/app/src/main/res/layout/activity_ble_data_passthrough.xml
+++ b/app/src/main/res/layout/activity_ble_data_passthrough.xml
@@ -95,10 +95,15 @@
             <Button
                 android:id="@+id/bt_commit"
                 style="@style/commonBtn"
-                android:layout_alignParentBottom="true"
                 android:layout_below="@id/et_output"
                 android:layout_marginTop="20dp"
                 android:text="Commit"/>
+            
+            <Button
+                android:id="@+id/bt_send_file"
+                style="@style/commonBtn"
+                android:layout_below="@+id/bt_commit"
+                android:text="Send File"/>
 
         </RelativeLayout>
     </LinearLayout>
