--- a/app/src/main/res/layout/activity_ble_data_passthrough.xml
+++ b/app/src/main/res/layout/activity_ble_data_passthrough.xml
@@ -98,12 +98,33 @@
                 android:layout_below="@id/et_output"
                 android:layout_marginTop="20dp"
                 android:text="Commit"/>
-            
-            <Button
-                android:id="@+id/bt_send_file"
-                style="@style/commonBtn"
+
+            <LinearLayout
+                android:id="@+id/ll_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/bt_commit"
-                android:text="Send File"/>
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bt_select_file"
+                    style="@style/commonBtn"
+                    android:layout_weight="1"
+                    android:text="Select File"/>
+
+                <Button
+                    android:id="@+id/bt_send_file"
+                    style="@style/commonBtn"
+                    android:layout_weight="1"
+                    android:text="Send File"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_send_file"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ll_bottom"/>
 
         </RelativeLayout>
     </LinearLayout>
