--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -84,7 +84,23 @@
         android:background="@drawable/shape_input_view_blue_bg"
         android:gravity="start"
         android:hint="license"
-        android:minHeight="200dp"
+        android:minHeight="150dp"
+        android:padding="5dp"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="vertical"
+        android:textColor="@color/textDark"
+        android:textSize="13sp"/>
+
+    <EditText
+        android:id="@+id/et_pair_cfg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_license"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shape_input_view_blue_bg"
+        android:gravity="start"
+        android:hint="pair server profile"
+        android:minHeight="150dp"
         android:padding="5dp"
         android:scrollbarStyle="insideOverlay"
         android:scrollbars="vertical"
