--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,7 +34,7 @@
     <style name="ActivityStyle" parent="AppTheme">
         <item name="android:windowDisablePreview">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowSoftInputMode">stateUnspecified|adjustUnspecified|stateHidden</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustUnspecified|stateHidden|adjustPan</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:screenOrientation">portrait</item>
