新增一个http压力测试项目，支持超时时间和发送间隔，统计成功次数。 入口device management - > Http Stress Test

--- a/app/src/main/res/layout/activity_dev_main.xml
+++ b/app/src/main/res/layout/activity_dev_main.xml
@@ -33,7 +33,12 @@
     <Button
         android:id="@+id/bt_stress_test"
         style="@style/commonBtn"
-        android:text="Stress Test"/>
+        android:text="Device Stress Test"/>
+    
+    <Button
+        android:id="@+id/bt_stress_test_http"
+        style="@style/commonBtn"
+        android:text="Http Stress Test"/>
 
 </LinearLayout>
 
