--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -23,28 +23,31 @@
 
     <RadioGroup
         android:id="@+id/rg_server_list"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/tv_cluster"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_cluster"
+        android:layout_marginTop="20dp">
+
         <RadioButton
             android:id="@+id/rb_baidu"
-            android:text="Ihc international Cluster"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="Ihc international Cluster"/>
+
         <RadioButton
             android:id="@+id/rb_international_china"
-            android:text="Internatinal China Cluster"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="Internatinal China Cluster"/>
+
         <RadioButton
             android:id="@+id/rb_custom"
-            android:text="Custom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="Custom"/>
     </RadioGroup>
-    
-    
+
+
     <EditText
         android:id="@+id/et_package"
         android:layout_width="match_parent"
@@ -59,13 +62,13 @@
         android:scrollbars="vertical"
         android:textColor="@color/textDark"
         android:textSize="13sp"/>
-    
+
     <EditText
         android:id="@+id/et_domain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_below="@+id/et_package"
+        android:layout_marginTop="20dp"
         android:background="@drawable/shape_input_view_blue_bg"
         android:hint="domain(default is empty)"
         android:minHeight="50dp"
@@ -106,6 +109,15 @@
         android:scrollbars="vertical"
         android:textColor="@color/textDark"
         android:textSize="13sp"/>
+
+    <Button
+        android:id="@+id/bt_default"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/et_pair_cfg"
+        android:layout_alignParentRight="true"
+        android:text="Default"
+        android:textSize="12sp"/>
 
     <Button
         android:id="@+id/bt_commit"
