--- a/app/src/main/res/layout/activity_dev_fastcon_bridge.xml
+++ b/app/src/main/res/layout/activity_dev_fastcon_bridge.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp">
 
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -30,11 +26,10 @@
         android:id="@+id/rv_list"
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="#ffffff"
+        android:layout_height="match_parent"
+        android:divider="@color/text999"
         android:background="@drawable/shape_stroke_right_round"
         android:dividerHeight="1px">
     </moe.leer.tree2view.TreeView>
 
 </LinearLayout>
-</ScrollView>
