--- a/app/src/main/res/layout/activity_dev_fastcon_bridge.xml
+++ b/app/src/main/res/layout/activity_dev_fastcon_bridge.xml
@@ -15,15 +15,14 @@
         android:gravity="top|left"
         android:layout_width="match_parent"
         android:scrollbarStyle="insideOverlay"
-        android:layout_height="wrap_content"
-        android:minHeight="100dp"
+        android:layout_height="120dp"
         android:textColor="@color/textDark"
         android:background="@drawable/shape_input_view_blue_bg"
         android:scrollbars="vertical"/>
 
 
     <moe.leer.tree2view.TreeView
-        android:id="@+id/rv_list"
+        android:id="@+id/v_list"
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
