增加长连接功能

--- a/app/src/main/res/layout/activity_home_main.xml
+++ b/app/src/main/res/layout/activity_home_main.xml
@@ -89,6 +89,16 @@
         android:text="BLE Management"
         />
 
+    <Button
+        android:id="@+id/btn_web_socket"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_below="@+id/btn_network_check"
+        android:text="WebSocket Management"
+        />
+    
     <TextView
         android:id="@+id/tv_version"
         android:layout_centerHorizontal="true"
