--- a/app/src/main/res/layout/item_fastcon_bridge.xml
+++ b/app/src/main/res/layout/item_fastcon_bridge.xml
@@ -33,5 +33,16 @@
         android:textSize="16sp"
         android:layout_alignParentRight="true"
         android:textColor="@color/colorAccent"/>
+    <Button
+        android:id="@+id/bt_path"
+        android:text="path"
+        android:textSize="12sp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:focusable="false"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_toLeftOf="@+id/tv_count"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
